@@ -1,1 +1,1 @@
-<%= hidden :value %>
+<%= hidden :token %>
