@@ -1,3 +1,4 @@
+<%= import :errors %>
 <form>
   <%= import :one_time_token %>	<!-- for Gluon::Web::OneTimeToken -->
   <p><%= value :now %></p>
